src/test/ui/argument-suggestions/permuted_arguments.stderr
error[E0308]: mismatched types
  --> $DIR/permuted_arguments.rs:10:14
   |
LL |   three_args(1.0, "", 1);
   |              ^^^ expected `i32`, found floating-point number

error[E0308]: mismatched types
  --> $DIR/permuted_arguments.rs:10:19
   |
LL |   three_args(1.0, "", 1);
   |                   ^^ expected `f32`, found `&str`

error[E0308]: mismatched types
  --> $DIR/permuted_arguments.rs:10:23
   |
LL |   three_args(1.0, "", 1);
   |                       ^ expected `&str`, found integer

error[E0308]: mismatched types
  --> $DIR/permuted_arguments.rs:15:13
   |
LL |   many_args(X {}, Y {}, 1, 1.0, "");
   |             ^^^^ expected `i32`, found struct `X`

error[E0308]: mismatched types
  --> $DIR/permuted_arguments.rs:15:19
   |
LL |   many_args(X {}, Y {}, 1, 1.0, "");
   |                   ^^^^ expected `f32`, found struct `Y`

error[E0308]: mismatched types
  --> $DIR/permuted_arguments.rs:15:25
   |
LL |   many_args(X {}, Y {}, 1, 1.0, "");
   |                         ^ expected `&str`, found integer

error[E0308]: mismatched types
  --> $DIR/permuted_arguments.rs:15:28
   |
LL |   many_args(X {}, Y {}, 1, 1.0, "");
   |                            ^^^ expected struct `X`, found floating-point number

error[E0308]: mismatched types
  --> $DIR/permuted_arguments.rs:15:33
   |
LL |   many_args(X {}, Y {}, 1, 1.0, "");
   |                                 ^^ expected struct `Y`, found `&str`

error: aborting due to 8 previous errors

For more information about this error, try `rustc --explain E0308`.
